# witchat

./: CHANGELOG.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: test_node.py
src/ragdoll/: cli.py  crypto.py  dht.py
src/witchat/: cli.py  crypto.py  dht.py  ui.py
