[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
commit_parser = "angular"
upload_to_vcs_release = true
branch = "master"
build_command = "uv build"
version_toml = ["pyproject.toml:project.version"]


[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "refactor"]
patch_tags = ["fix", "perf", "ci", "docs", "chore"]

[project]
name = "witchat"
version = "0.2.2"
description = "An encrypted p2p chat app"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "vividsystem"}]
license = { file = "LICENSE" }
dependencies = [
    "asyncio>=4.0.0",
    "kademlia>=2.2.3",
    "prompt-toolkit>=3.0.52",
    "pynacl>=1.6.0",
    "uvloop>=0.22.1",
]

[project.urls]
Repository = "https://github.com/vividsystem/witchat"

[project.scripts]
witchat = "witchat.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/witchat"]
